grammar_to_ply/error_msgs.txt
  File "../programs/python/loop/output_programs/errors/sum_till_n_1_error.py", line 1
    Line no. 1 :  ] missing
          ^
SyntaxError: invalid syntax
